src/test/ui/issues/issue-69455.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-69455.rs:29:26
   |
LL |     type Output;
   |     ------------ `<Self as Test<Rhs>>::Output` defined here
...
LL |     println!("{}", 23u64.test(xs.iter().sum()));
   |                    ------^^^^-----------------
   |                    |     |
   |                    |     cannot infer type for type `u64`
   |                    this method call resolves to `<Self as Test<Rhs>>::Output`
   |
   = note: cannot satisfy `<u64 as Test<_>>::Output == _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
